--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#compare">Compare</a></li>
                 <li><a href="#history">History</a></li>
+                <li><a href="#" onclick="logout()">Logout</a></li>
             </ul>
         </nav>
     </header>
@@ -39,12 +40,26 @@
                 <!-- Results will be populated here -->
             </div>
         </section>
+
+        <section class="history-section" id="history" style="display: none;">
+            <h2>Your Receipt History</h2>
+            <div class="history-container">
+                <!-- History will be populated here -->
+            </div>
+        </section>
     </main>
 
     <footer>
         <p>&copy; 2023 Receiptify. All rights reserved.</p>
     </footer>
 
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-auth-compat.js"></script>
+    
+    <!-- App Scripts -->
+    <script src="js/firebase-config.js"></script>
+    <script src="js/auth.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html> 
